homepage scroll to bottom and then click

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,70 +1,71 @@
 {
-    "cSpell.words": [
-        "apypercent",
-        "backgrounding",
-        "btnradio",
-        "calculateapy",
-        "calculatecompoundedamount",
-        "calculatecreditcardrepayment",
-        "calculatemortgage",
-        "calculaterpriceperunit",
-        "calculatesalary",
-        "calculatesaving",
-        "calculatesip",
-        "calculatetypewise",
-        "cardbox",
-        "carprice",
-        "chartradio",
-        "commentform",
-        "convertcurrency",
-        "convertunit",
-        "crios",
-        "downpayment",
-        "edgios",
-        "fxios",
-        "hourlyamount",
-        "hourperweek",
-        "initialamount",
-        "Interactable",
-        "interestrate",
-        "KHTML",
-        "loanamount",
-        "loanbalance",
-        "lunaproxy",
-        "monthlypaymentadd",
-        "monthlyrepayradio",
-        "monthlyreturn",
-        "monthradio",
-        "osascript",
-        "paymonths",
-        "payoffradio",
-        "piechart",
-        "privacypolicy",
-        "ralltimereturnrate",
-        "rbalancerepay",
-        "redcolor",
-        "rtotalearning",
-        "rtotalpayments",
-        "rwealthgain",
-        "salaryamount",
-        "seleniumwire",
-        "sqft",
-        "squarefoot",
-        "sqyd",
-        "startdate",
-        "tableradio",
-        "textresult",
-        "thirdparty",
-        "timeday",
-        "timemonth",
-        "timeweek",
-        "timeyear",
-        "totalarea",
-        "totalprice",
-        "useragent",
-        "utms",
-        "weekperyear",
-        "yearradio",
-        "zachto"
-    ]
+  "cSpell.words": [
+    "apypercent",
+    "backgrounding",
+    "btnradio",
+    "calculateapy",
+    "calculatecompoundedamount",
+    "calculatecreditcardrepayment",
+    "calculatemortgage",
+    "calculaterpriceperunit",
+    "calculatesalary",
+    "calculatesaving",
+    "calculatesip",
+    "calculatetypewise",
+    "cardbox",
+    "carprice",
+    "chartradio",
+    "commentform",
+    "convertcurrency",
+    "convertunit",
+    "crios",
+    "downpayment",
+    "edgios",
+    "fxios",
+    "gameappszone",
+    "hourlyamount",
+    "hourperweek",
+    "initialamount",
+    "Interactable",
+    "interestrate",
+    "KHTML",
+    "loanamount",
+    "loanbalance",
+    "lunaproxy",
+    "monthlypaymentadd",
+    "monthlyrepayradio",
+    "monthlyreturn",
+    "monthradio",
+    "osascript",
+    "paymonths",
+    "payoffradio",
+    "piechart",
+    "privacypolicy",
+    "ralltimereturnrate",
+    "rbalancerepay",
+    "redcolor",
+    "rtotalearning",
+    "rtotalpayments",
+    "rwealthgain",
+    "salaryamount",
+    "seleniumwire",
+    "sqft",
+    "squarefoot",
+    "sqyd",
+    "startdate",
+    "tableradio",
+    "textresult",
+    "thirdparty",
+    "timeday",
+    "timemonth",
+    "timeweek",
+    "timeyear",
+    "totalarea",
+    "totalprice",
+    "useragent",
+    "utms",
+    "weekperyear",
+    "yearradio",
+    "zachto"
+  ]
 }
