--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
     "loanamount",
     "loanbalance",
     "lunaproxy",
+    "Markertplace",
     "monthlypaymentadd",
     "monthlyrepayradio",
     "monthlyreturn",
